@@ -2080,7 +2080,7 @@ def test_overload(app):
         '',
         '   .. py:method:: Math.sum(x: int, y: int = 0) -> int',
         '                  Math.sum(x: float, y: float = 0.0) -> float',
-        '                  Math.sum(x: str, y: str = ...) -> str',
+        '                  Math.sum(x: str, y: str = None) -> str',
         '      :module: target.overload',
         '',
         '      docstring',
@@ -2088,7 +2088,7 @@ def test_overload(app):
         '',
         '.. py:function:: sum(x: int, y: int = 0) -> int',
         '                 sum(x: float, y: float = 0.0) -> float',
-        '                 sum(x: str, y: str = ...) -> str',
+        '                 sum(x: str, y: str = None) -> str',
         '   :module: target.overload',
         '',
         '   docstring',
