@@ -647,13 +647,13 @@ def test_autodoc_typehints_none_for_overload(app):
         '   docstring',
         '',
         '',
-        '   .. py:method:: Math.sum(x, y)',
+        '   .. py:method:: Math.sum(x, y=None)',
         '      :module: target.overload',
         '',
         '      docstring',
         '',
         '',
-        '.. py:function:: sum(x, y)',
+        '.. py:function:: sum(x, y=None)',
         '   :module: target.overload',
         '',
         '   docstring',
